--- a/src/css/components/_shared.sass
+++ b/src/css/components/_shared.sass
@@ -7,10 +7,6 @@
     .time
         color: $gray-600
 
-
-    .two-column-list
-        column-count: 2
-
     ul
         list-style-type: disc
 
