--- a/src/css/components/header.sass
+++ b/src/css/components/header.sass
@@ -90,15 +90,14 @@
                     margin: 0
                     text-align: center
 
-            & > p.name
-                font-size: 1.5em
-                text-transform: uppercase
+            & > h2
+                font-size: 1.3em
 
-            a
-                font-size: 1em
-                color: $black
-                text-transform: uppercase
-                text-decoration: none
+                & > a
+                    font-size: 1em
+                    color: $black
+                    text-transform: uppercase
+                    text-decoration: none
 
-                & > span
-                    text-decoration: underline
+                    & > span
+                        text-decoration: underline
